<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">
    <ImageView
        android:id="@+id/register_image"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/signup_photo"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:scaleType="fitCenter"/>
    <EditText
        android:id="@+id/register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/register_image"
        android:hint="@string/email"
        android:padding="4dp"
        android:inputType="textEmailAddress"
        android:drawableStart="@drawable/email"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="17dp"/>
    <EditText
        android:id="@+id/register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/register_email"
        android:hint="@string/password"
        android:padding="4dp"
        android:inputType="textPassword"
        android:drawableStart="@drawable/password"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="17dp"/>

    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_password"
        android:padding="4dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="19dp"
        android:layout_marginRight="19dp"
        android:text="@string/register"
        android:textSize="24sp"
        android:textAllCaps="false"/>
    <TextView
        android:id="@+id/already_have_account_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"
        android:layout_below="@id/register_button"
        android:layout_marginEnd="23dp"
        android:text="@string/already_account"
        android:textAlignment="center"
        android:textSize="17sp"
        android:textStyle="bold"/>

</RelativeLayout>